# unbabel-challenge

./: .gitignore  .travis.yml  CODEOWNERS  LICENSE  Pipfile  README.md  setup.cfg  setup.py  tox.ini
sam/: __init__.py  __main__.py  main.py  stream.py
tests/: test_main.py  test_stream.py
tests/files/: coverall.jsonl
