[metadata]
name=sam
author=Raul Gonzales
url=https://github.com/gonzalesraul/unbabel-challenge
keywords=unbabel challenge cli
license=GNU General Public License v3 (GPLv3)
description=SAM (Stream Average Metric) - Simple CLI to calculate the average took to delivery translations in a data stream
long_description = file: README.md, LICENSE
classifiers = 
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
